// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontTileSummary performs measurements before rendering front tile summary 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    testID="headlineWrapper"
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    testID="straplineWrapper"
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    testID="bylineWrapper"
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`FrontTileSummary renders byline with keyline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
      showKeyline={true}
    />
  </View>
  <FrontArticleSummaryContent
    bylines={
      Array [
        Object {
          "byline": Array [
            Object {
              "foo": "bar",
            },
          ],
        },
      ]
    }
    numberOfLines={4}
    summary={
      Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Test",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ]
    }
    summaryStyle={
      Object {
        "backgroundColor": "orange",
      }
    }
  />
</View>
`;

exports[`FrontTileSummary renders with 2 columns 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 15,
      }
    }
  />
  <FrontArticleSummaryContent
    bylines={
      Array [
        Object {
          "byline": Array [
            Object {
              "foo": "bar",
            },
          ],
        },
      ]
    }
    columnCount={2}
    numberOfLines={4}
    summary={
      Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Test",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ]
    }
    summaryStyle={
      Object {
        "backgroundColor": "orange",
      }
    }
  />
</View>
`;

exports[`FrontTileSummary renders with a missing byline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <FrontArticleSummaryContent
    numberOfLines={6}
    summary={
      Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Test",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ]
    }
    summaryStyle={
      Object {
        "backgroundColor": "orange",
      }
    }
  />
</View>
`;

exports[`FrontTileSummary renders with a missing strapline 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <FrontArticleSummaryContent
    bylines={
      Array [
        Object {
          "byline": Array [
            Object {
              "foo": "bar",
            },
          ],
        },
      ]
    }
    numberOfLines={6}
    summary={
      Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Test",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ]
    }
    summaryStyle={
      Object {
        "backgroundColor": "orange",
      }
    }
  />
</View>
`;

exports[`FrontTileSummary shows front tile summary with headline only after measurement has been taken 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`FrontTileSummary shows front tile summary with headline/strapline/byline/content after measurement has been taken 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "flex": 1,
      },
      Object {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <ArticleSummaryHeadline
      headline="This is tile headline"
      style={
        Array [
          Object {
            "backgroundColor": "blue",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ArticleSummaryStrapline
      strapline="Strapline Text"
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <FrontPageByline
      byline={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      containerStyle={
        Array [
          undefined,
          Object {
            "marginBottom": 0,
          },
        ]
      }
    />
  </View>
  <FrontArticleSummaryContent
    bylines={
      Array [
        Object {
          "byline": Array [
            Object {
              "foo": "bar",
            },
          ],
        },
      ]
    }
    numberOfLines={4}
    summary={
      Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {
                "value": "Test",
              },
              "children": Array [],
              "name": "text",
            },
          ],
          "name": "paragraph",
        },
      ]
    }
    summaryStyle={
      Object {
        "backgroundColor": "orange",
      }
    }
  />
</View>
`;
